# arena

./: .gitignore  ARENA_LIVE_PLAN.md  ARENA_PLAN.md  DEVELOPMENT_PLAN.md  PRESSCHECK_PLAN.md  README.md  SHOTLIST_PLAN.md  bot.py  env.example  pyproject.toml  server.py
engine/: api.py  cache.py  executor.py  ir.py  live_api.py  models.py  planner.py  repair.py  shots_api.py
engine/critic/: typography.py  vision.py
engine/live/: __init__.py  api.py  effects.py  session.py  state.py
engine/prompt/: __init__.py  compile.py  link.py  lower.py  resolve.py
engine/prompt/templates/: v1.py
engine/shots/: __init__.py  clip.py  compile.py  executor.py  link.py  templates.py
gates/: gate_a_cost_ipm.py  gate_d_undo_origin.py  gate_j_live_tool_call.py
gates/gate_d/: agent.py  server.py
tests/: test_api.py  test_cache.py  test_executor.py  test_models_clip.py  test_planner.py  test_prompt_golden.py  test_repair.py  test_shot_clip.py  test_shot_executor.py  test_shot_prompt_golden.py  test_shots_api.py  test_typography_corpus.py  test_typography_critic.py  test_vision_critic.py
tests/fixtures/: formats.py  golden_prompts.json  golden_shot_prompts.json  locales.py  matrix.py  regen_golden.py  regen_shot_golden.py  scenes.py  shots.py  typography_corpus.py
web/: astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.js
web/scripts/: gate-d-browser.mjs
web/src/: env.d.ts
web/src/components/: AgentBar.tsx  Editor.tsx  Hero.tsx  LiveCamera.tsx  ReviewPanel.tsx  StudioEditor.tsx  proofFrame.tsx
web/src/lib/: api.ts  catalog.ts  grid.ts  (+4 more)
(+22 files in other folders)
