[project]
name = "presscheck"
version = "0.1.0"
description = "Agentic poster and asset localization pipeline"
requires-python = ">=3.12"
dependencies = [
    "pipecat-ai[google,silero,webrtc]>=1.4.0",
    "pipecat-ai-prebuilt>=0.1.0",
    "aiohttp>=3.10.0",
    "fastapi>=0.115.6,<0.117.0",
    "uvicorn>=0.32.0,<1.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "pillow>=12.3.0",
    "numpy>=2.4.6",
    "fonttools>=4.63.0",
    "pycrdt>=0.14.1",
    "websockets>=16.0",
    "pycrdt-websocket>=0.16.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
